marc, mets redirect

--- a/standards/vracore/coreAC.html
+++ b/standards/vracore/coreAC.html
@@ -29,8 +29,8 @@
   <input type="hidden" name="qc" value="">
   <table align="center" class="header" cellpadding="0" cellspacing="0" border="0">
     <tr>
-      <td width="436"><a id="skip2" href="#skip_menu">&nbsp;</a><a href="http://www.loc.gov/">The
-      Library of Congress</a> &gt;&gt; <a href="http://www.loc.gov/standards/">Standards</a> &gt;&gt; <a href="http://www.loc.gov/standards/vracore/">VRA CORE</a></td>
+      <td width="436"><a id="skip2" href="#skip_menu">&nbsp;</a><a href="http://lcnetdev.github.io/">The
+      Library of Congress</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/">Standards</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/vracore/">VRA CORE</a></td>
       <td width="178" align="right"><select name="qp" tabindex="1">
           <option value="url:/standards/vracore/" selected>VRA CORE Pages</option>
           <option value="url:/standards url:/ead url:/marc">Standards Pages</option>
@@ -45,8 +45,8 @@
 </form>
 <table border="0" align="center" cellpadding="0" cellspacing="0" class="layout">
   <tr>
-    <td><div id="graphic"><a href="http://www.loc.gov/standards/vracore/"><img src="images/vracorebrown.gif" alt="VRA CORE - a data standard for the description of images and works of art and culture: Official Web Site" width="765" height="80" border="0"></a></div>
-      <p>&nbsp;&nbsp;&nbsp;<a href="http://www.loc.gov/standards/vracore/">HOME</a> >> <!-- InstanceBeginEditable name="topbreadcrumb" --><span class="selected">VRA Core Advisory Committee </span><!-- InstanceEndEditable --></p>
+    <td><div id="graphic"><a href="http://lcnetdev.github.io/standards/vracore/"><img src="images/vracorebrown.gif" alt="VRA CORE - a data standard for the description of images and works of art and culture: Official Web Site" width="765" height="80" border="0"></a></div>
+      <p>&nbsp;&nbsp;&nbsp;<a href="http://lcnetdev.github.io/standards/vracore/">HOME</a> >> <!-- InstanceBeginEditable name="topbreadcrumb" --><span class="selected">VRA Core Advisory Committee </span><!-- InstanceEndEditable --></p>
       <a name="skip_menu"></a>
       <table width="697" border="0" cellspacing="0" cellpadding="5">
         <tr>
@@ -71,12 +71,12 @@
 </table>
 <table align="center" class="footer" cellpadding="0" cellspacing="0" border="0">
   <tr valign="top">
-    <td><p><a href="http://www.loc.gov/">The
-      Library of Congress</a> &gt;&gt; <a href="http://www.loc.gov/standards/">Standards</a> &gt;&gt; <a href="http://www.loc.gov/standards/vracore/">VRA CORE</a></p></td>
+    <td><p><a href="http://lcnetdev.github.io/">The
+      Library of Congress</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/">Standards</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/vracore/">VRA CORE</a></p></td>
     <td align="right"><p><a href="mailto:ndmso@loc.gov">Contact Us</a> (
       <!-- #BeginDate format:Am1 -->June 5, 2012<!-- #EndDate -->
       ) <br>
-      <a href="http://www.loc.gov/homepage/legal.html">Legal</a>&nbsp;|&nbsp;<a href="http://www.loc.gov/global/disclaim.html">External Link Disclaimer</a></p></td>
+      <a href="http://lcnetdev.github.io/homepage/legal.html">Legal</a>&nbsp;|&nbsp;<a href="http://lcnetdev.github.io/global/disclaim.html">External Link Disclaimer</a></p></td>
   </tr>
 </table>
 </body>
