--- a/standards/vracore/indexTM.html
+++ b/standards/vracore/indexTM.html
@@ -25,8 +25,8 @@
   <input type="hidden" name="qc" value="">
   <table align="center" class="header" cellpadding="0" cellspacing="0" border="0">
     <tr>
-      <td width="454"><a id="skip2" href="#skip_menu">&nbsp;</a><a href="http://www.loc.gov/">The
-      Library of Congress</a> &gt;&gt; <a href="http://www.loc.gov/standards/">Standards</a> &gt;&gt; <a href="http://www.loc.gov/standards/vracore/">VRA CORE</a></td>
+      <td width="454"><a id="skip2" href="#skip_menu">&nbsp;</a><a href="http://lcnetdev.github.io/">The
+      Library of Congress</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/">Standards</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/vracore/">VRA CORE</a></td>
       <td width="160" align="right"><select name="qp" tabindex="1">
           <option value="url:/standards/vracore/" selected>VRA CORE Pages</option>
           <option value="url:/standards url:/ead url:/marc">Standards Pages</option>
@@ -41,7 +41,7 @@
 </form>
 <table border="0" align="center" cellpadding="0" cellspacing="0" class="layout">
   <tr>
-    <td><div id="graphic"><a href="http://www.loc.gov/standards/vracore/"> <img src="images/vracorebrown.gif" alt="VRA CORE - a data standard for the description of images and works of art and culture: Official Web Site" width="765" height="80" border="0"></a></div>
+    <td><div id="graphic"><a href="http://lcnetdev.github.io/standards/vracore/"> <img src="images/vracorebrown.gif" alt="VRA CORE - a data standard for the description of images and works of art and culture: Official Web Site" width="765" height="80" border="0"></a></div>
       
       <table width="697" border="0" cellspacing="0" cellpadding="5">
         <tr>
@@ -50,8 +50,8 @@
       <div class="box">
         <h3>VRA Core News</h3>
         <ul type="disc">
-          <li><a href="http://www.loc.gov/standards/vracore/vraXMP.html">Core Oversight Committee</a></li>
-          <li><a href="http://www.loc.gov/standards/vracore/coreOC.html">Release of VRA XMP Info Panel (beta)</a></li>
+          <li><a href="http://lcnetdev.github.io/standards/vracore/vraXMP.html">Core Oversight Committee</a></li>
+          <li><a href="http://lcnetdev.github.io/standards/vracore/coreOC.html">Release of VRA XMP Info Panel (beta)</a></li>
         </ul>
         <div align="center">
           <hr size="2" width="100%" align="center">
@@ -64,12 +64,12 @@
       <h2>VRA CORE Schema, &amp; Documentation</h2>
       <ul>
         <li><a href="schemas.html">VRA Core Schemas and Documentation</a></li>
-        <li><a href="http://www.vraweb.org/projects/vracore4/">VRA Core User Support</a>  <img src="http://www.loc.gov/images/icon-ext2.gif" alt="External Link" height="10" width="8"> - includes VRA Core examples, presentations, and tools</li>
+        <li><a href="http://www.vraweb.org/projects/vracore4/">VRA Core User Support</a>  <img src="http://lcnetdev.github.io/images/icon-ext2.gif" alt="External Link" height="10" width="8"> - includes VRA Core examples, presentations, and tools</li>
       </ul>
-            <p>The VRA Core is a data standard for the description of  works of visual culture as well as the images that document them. The standard  is hosted by the <a href="http://www.loc.gov/marc/ndmso.html">Network  Development and MARC Standards Office</a> of the Library of Congress (LC) in  partnership with the <a href="http://www.vraweb.org/">Visual Resources  Association</a> <img src="http://www.loc.gov/images/icon-ext2.gif" alt="External Link" height="10" width="8">. Questions about the  standard&rsquo;s schemas and documentation should be directed to <a href="mailto:datastandards@vraweb.org"></a><a href="mailto:vracore@vraweb.org" target="_blank">vracore</a><a href="mailto:vracore@vraweb.org">@vraweb.org</a>. Questions  about the official Core website or list should be directed to <a href="mailto:ndmso@loc.gov">ndmso@loc.gov</a>.</p>
+            <p>The VRA Core is a data standard for the description of  works of visual culture as well as the images that document them. The standard  is hosted by the <a href="http://lcnetdev.github.io/marc/ndmso.html">Network  Development and MARC Standards Office</a> of the Library of Congress (LC) in  partnership with the <a href="http://www.vraweb.org/">Visual Resources  Association</a> <img src="http://lcnetdev.github.io/images/icon-ext2.gif" alt="External Link" height="10" width="8">. Questions about the  standard&rsquo;s schemas and documentation should be directed to <a href="mailto:datastandards@vraweb.org"></a><a href="mailto:vracore@vraweb.org" target="_blank">vracore</a><a href="mailto:vracore@vraweb.org">@vraweb.org</a>. Questions  about the official Core website or list should be directed to <a href="mailto:ndmso@loc.gov">ndmso@loc.gov</a>.</p>
             <p>VRA
-            Core&rsquo;s schemas and documentation are now accessible at <A href="http://www.loc.gov/standards/vracore/">http://www.loc.gov/standards/vracore/</A>, while   user support materials, suchas VRA Core examples, FAQs and presentations, will   continue to be
-            accessible at <A href="http://www.vraweb.org/projects/vracore4/">http://www.vraweb.org/projects/vracore4/</A> <img src="http://www.loc.gov/images/icon-ext2.gif" alt="External Link" height="10" width="8">.</p>
+            Core&rsquo;s schemas and documentation are now accessible at <A href="http://lcnetdev.github.io/standards/vracore/">http://lcnetdev.github.io/standards/vracore/</A>, while   user support materials, suchas VRA Core examples, FAQs and presentations, will   continue to be
+            accessible at <A href="http://www.vraweb.org/projects/vracore4/">http://www.vraweb.org/projects/vracore4/</A> <img src="http://lcnetdev.github.io/images/icon-ext2.gif" alt="External Link" height="10" width="8">.</p>
             <p><BR>
             </p></td></tr></table>
             
@@ -78,12 +78,12 @@
 </table>
 <table align="center" class="footer" cellpadding="0" cellspacing="0" border="0">
   <tr valign="top">
-    <td><p><a href="http://www.loc.gov/">The
-      Library of Congress</a> &gt;&gt; <a href="http://www.loc.gov/standards/">Standards</a> &gt;&gt; <a href="http://www.loc.gov/standards/vracore/">VRA CORE</a></p></td>
+    <td><p><a href="http://lcnetdev.github.io/">The
+      Library of Congress</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/">Standards</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/vracore/">VRA CORE</a></p></td>
     <td align="right"><p><a href="mailto:ndmso@loc.gov">Contact Us</a> (
       <!-- #BeginDate format:Am1 -->December 9, 2010<!-- #EndDate -->
       ) <br>
-  <a href="http://www.loc.gov/homepage/legal.html">Legal</a>&nbsp;|&nbsp;<a href="http://www.loc.gov/global/disclaim.html">External Link Disclaimer</a> </p></td>
+  <a href="http://lcnetdev.github.io/homepage/legal.html">Legal</a>&nbsp;|&nbsp;<a href="http://lcnetdev.github.io/global/disclaim.html">External Link Disclaimer</a> </p></td>
   </tr>
 </table>
 </body>
