--- a/standards/vracore/schemas2.html
+++ b/standards/vracore/schemas2.html
@@ -29,8 +29,8 @@
   <input type="hidden" name="qc" value="">
   <table align="center" class="header" cellpadding="0" cellspacing="0" border="0">
     <tr>
-      <td width="436"><a id="skip2" href="#skip_menu">&nbsp;</a><a href="http://www.loc.gov/">The
-      Library of Congress</a> &gt;&gt; <a href="http://www.loc.gov/standards/">Standards</a> &gt;&gt; <a href="http://www.loc.gov/standards/vracore/">VRA CORE</a></td>
+      <td width="436"><a id="skip2" href="#skip_menu">&nbsp;</a><a href="http://lcnetdev.github.io/">The
+      Library of Congress</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/">Standards</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/vracore/">VRA CORE</a></td>
       <td width="178" align="right"><select name="qp" tabindex="1">
           <option value="url:/standards/vracore/" selected>VRA CORE Pages</option>
           <option value="url:/standards url:/ead url:/marc">Standards Pages</option>
@@ -45,8 +45,8 @@
 </form>
 <table border="0" align="center" cellpadding="0" cellspacing="0" class="layout">
   <tr>
-    <td><div id="graphic"><a href="http://www.loc.gov/standards/vracore/"><img src="images/vracorebrown.gif" alt="VRA CORE - a data standard for the description of images and works of art and culture: Official Web Site" width="765" height="80" border="0"></a></div>
-      <p>&nbsp;&nbsp;&nbsp;<a href="http://www.loc.gov/standards/vracore/">HOME</a> >> <!-- InstanceBeginEditable name="topbreadcrumb" --><span class="selected">VRA Core Schemas and Documentation</span><!-- InstanceEndEditable --></p>
+    <td><div id="graphic"><a href="http://lcnetdev.github.io/standards/vracore/"><img src="images/vracorebrown.gif" alt="VRA CORE - a data standard for the description of images and works of art and culture: Official Web Site" width="765" height="80" border="0"></a></div>
+      <p>&nbsp;&nbsp;&nbsp;<a href="http://lcnetdev.github.io/standards/vracore/">HOME</a> >> <!-- InstanceBeginEditable name="topbreadcrumb" --><span class="selected">VRA Core Schemas and Documentation</span><!-- InstanceEndEditable --></p>
       <a name="skip_menu"></a>
       <table width="697" border="0" cellspacing="0" cellpadding="5">
         <tr>
@@ -57,9 +57,9 @@
                 version - released 4/9/07)
                 <ul>
                   <li><a
-href="http://www.vraweb.org/projects/vracore4/vra-4.0.xsd">Unrestricted Version</a> <img src="http://www.loc.gov/images/icon-ext2.gif" alt="External Link" width="8" height="10"> - specifies the basic structure of the schema </li>
+href="http://www.vraweb.org/projects/vracore4/vra-4.0.xsd">Unrestricted Version</a> <img src="http://lcnetdev.github.io/images/icon-ext2.gif" alt="External Link" width="8" height="10"> - specifies the basic structure of the schema </li>
                   <li><a
-href="http://www.vraweb.org/projects/vracore4/vra-4.0-restricted.xsd">Restricted Version</a> <img src="http://www.loc.gov/images/icon-ext2.gif" alt="External Link" width="8" height="10"> - extends the unrestricted schema by adding controlled
+href="http://www.vraweb.org/projects/vracore4/vra-4.0-restricted.xsd">Restricted Version</a> <img src="http://lcnetdev.github.io/images/icon-ext2.gif" alt="External Link" width="8" height="10"> - extends the unrestricted schema by adding controlled
                     type lists and date formats</li>
                 </ul>
               </li>
@@ -68,14 +68,14 @@ href="http://www.vraweb.org/projects/vracore4/vra-4.0-restricted.xsd">Restricted
                   <li>English
                     <ul>
                       <li><a
-href="http://www.vraweb.org/projects/vracore4/VRA_Core4_Intro.pdf">VRA Core 4.0 Introduction -&nbsp; (PDF) </a> <img src="http://www.loc.gov/images/icon-ext2.gif" alt="External Link" width="8" height="10"></li>
+href="http://www.vraweb.org/projects/vracore4/VRA_Core4_Intro.pdf">VRA Core 4.0 Introduction -&nbsp; (PDF) </a> <img src="http://lcnetdev.github.io/images/icon-ext2.gif" alt="External Link" width="8" height="10"></li>
                       <li><a
-href="http://www.vraweb.org/projects/vracore4/VRA_Core4_Outline.pdf">VRA Core 4.0 Element Outline - (PDF) </a> <img src="http://www.loc.gov/images/icon-ext2.gif" alt="External Link" width="8" height="10"></li>
+href="http://www.vraweb.org/projects/vracore4/VRA_Core4_Outline.pdf">VRA Core 4.0 Element Outline - (PDF) </a> <img src="http://lcnetdev.github.io/images/icon-ext2.gif" alt="External Link" width="8" height="10"></li>
                       <li><a
 href="http://www.vraweb.org/projects/vracore4/VRA_Core4_Element_Description.pdf">VRA Core 4.0 Element Description and Tagging Examples
-                        (PDF) </a> <img src="http://www.loc.gov/images/icon-ext2.gif" alt="External Link" width="8" height="10"></li>
+                        (PDF) </a> <img src="http://lcnetdev.github.io/images/icon-ext2.gif" alt="External Link" width="8" height="10"></li>
                       <li><a
-href="http://www.vraweb.org/projects/vracore4/VRA_Core4_Restricted_schema_type_values.pdf">Restricted Schema Type Values (PDF)</a> <img src="http://www.loc.gov/images/icon-ext2.gif" alt="External Link" width="8" height="10"></li>
+href="http://www.vraweb.org/projects/vracore4/VRA_Core4_Restricted_schema_type_values.pdf">Restricted Schema Type Values (PDF)</a> <img src="http://lcnetdev.github.io/images/icon-ext2.gif" alt="External Link" width="8" height="10"></li>
                     </ul>
                   </li>
                   <li>Italian
@@ -85,7 +85,7 @@ href="http://www.vraweb.org/projects/vracore4/pdfs/VRA_Core4_Element_Description
 target="_blank">VRA Core 4.0 Element Description
                         and Tagging Examples -&nbsp; (PDF)&nbsp; &nbsp;<i>(Translation by Maria Emilia Masci - Italian
                           Ministry for Cultural Heritage - Scuola Normale Superiore di Pisa
-                          [http://www.beniculturali.gov.it/])</i></a> <img src="http://www.loc.gov/images/icon-ext2.gif" alt="External Link" width="8" height="10"></li>
+                          [http://www.beniculturali.gov.it/])</i></a> <img src="http://lcnetdev.github.io/images/icon-ext2.gif" alt="External Link" width="8" height="10"></li>
                     </ul>
                   </li>
                 </ul>
@@ -98,12 +98,12 @@ target="_blank">VRA Core 4.0 Element Description
 </table>
 <table align="center" class="footer" cellpadding="0" cellspacing="0" border="0">
   <tr valign="top">
-    <td><p><a href="http://www.loc.gov/">The
-      Library of Congress</a> &gt;&gt; <a href="http://www.loc.gov/standards/">Standards</a> &gt;&gt; <a href="http://www.loc.gov/standards/vracore/">VRA CORE</a></p></td>
+    <td><p><a href="http://lcnetdev.github.io/">The
+      Library of Congress</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/">Standards</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/vracore/">VRA CORE</a></p></td>
     <td align="right"><p><a href="mailto:ndmso@loc.gov">Contact Us</a> (
       <!-- #BeginDate format:Am1 -->October 29, 2010<!-- #EndDate -->
       ) <br>
-      <a href="http://www.loc.gov/homepage/legal.html">Legal</a>&nbsp;|&nbsp;<a href="http://www.loc.gov/global/disclaim.html">External Link Disclaimer</a></p></td>
+      <a href="http://lcnetdev.github.io/homepage/legal.html">Legal</a>&nbsp;|&nbsp;<a href="http://lcnetdev.github.io/global/disclaim.html">External Link Disclaimer</a></p></td>
   </tr>
 </table>
 </body>
