--- a/standards/vracore/vraCore.html
+++ b/standards/vracore/vraCore.html
@@ -29,8 +29,8 @@
   <input type="hidden" name="qc" value="">
   <table align="center" class="header" cellpadding="0" cellspacing="0" border="0">
     <tr>
-      <td width="436"><a id="skip2" href="#skip_menu">&nbsp;</a><a href="http://www.loc.gov/">The
-      Library of Congress</a> &gt;&gt; <a href="http://www.loc.gov/standards/">Standards</a> &gt;&gt; <a href="http://www.loc.gov/standards/vracore/">VRA CORE</a></td>
+      <td width="436"><a id="skip2" href="#skip_menu">&nbsp;</a><a href="http://lcnetdev.github.io/">The
+      Library of Congress</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/">Standards</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/vracore/">VRA CORE</a></td>
       <td width="178" align="right"><select name="qp" tabindex="1">
           <option value="url:/standards/vracore/" selected>VRA CORE Pages</option>
           <option value="url:/standards url:/ead url:/marc">Standards Pages</option>
@@ -45,8 +45,8 @@
 </form>
 <table border="0" align="center" cellpadding="0" cellspacing="0" class="layout">
   <tr>
-    <td><div id="graphic"><a href="http://www.loc.gov/standards/vracore/"><img src="images/vracorebrown.gif" alt="VRA CORE - a data standard for the description of images and works of art and culture: Official Web Site" width="765" height="80" border="0"></a></div>
-      <p>&nbsp;&nbsp;&nbsp;<a href="http://www.loc.gov/standards/vracore/">HOME</a> >> <!-- InstanceBeginEditable name="topbreadcrumb" -->VRA Core <!-- InstanceEndEditable --></p>
+    <td><div id="graphic"><a href="http://lcnetdev.github.io/standards/vracore/"><img src="images/vracorebrown.gif" alt="VRA CORE - a data standard for the description of images and works of art and culture: Official Web Site" width="765" height="80" border="0"></a></div>
+      <p>&nbsp;&nbsp;&nbsp;<a href="http://lcnetdev.github.io/standards/vracore/">HOME</a> >> <!-- InstanceBeginEditable name="topbreadcrumb" -->VRA Core <!-- InstanceEndEditable --></p>
       <a name="skip_menu"></a>
       <table width="697" border="0" cellspacing="0" cellpadding="5">
         <tr>
@@ -55,7 +55,7 @@
             <p>The VRA Core is a  data standard for the description of works of visual culture as well as the  images that<br>
 document them. The standard is now being hosted by the Network Development and  MARC Standards<br>
 Office of the Library of Congress (LC) in partnership with the Visual Resources  Association . VRA<br>
-Core&rsquo;s schemas and documentation are now accessible at <a href="http://www.loc.gov/standards/vracore/">http://www.loc.gov/standards/vracore/</a><br>
+Core&rsquo;s schemas and documentation are now accessible at <a href="http://lcnetdev.github.io/standards/vracore/">http://lcnetdev.github.io/standards/vracore/</a><br>
 while user support materials, such as VRA Core examples, FAQs and  presentations, will continue to be<br>
 accessible at <a href="http://www.vraweb.org/projects/vracore4/">http://www.vraweb.org/projects/vracore4/</a><br>
 &nbsp;<br>
@@ -75,12 +75,12 @@ to <a href="mailto:ndmso@loc.gov">ndmso@loc.gov</a>.</p>
 </table>
 <table align="center" class="footer" cellpadding="0" cellspacing="0" border="0">
   <tr valign="top">
-    <td><p><a href="http://www.loc.gov/">The
-      Library of Congress</a> &gt;&gt; <a href="http://www.loc.gov/standards/">Standards</a> &gt;&gt; <a href="http://www.loc.gov/standards/vracore/">VRA CORE</a></p></td>
+    <td><p><a href="http://lcnetdev.github.io/">The
+      Library of Congress</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/">Standards</a> &gt;&gt; <a href="http://lcnetdev.github.io/standards/vracore/">VRA CORE</a></p></td>
     <td align="right"><p><a href="mailto:ndmso@loc.gov">Contact Us</a> (
       <!-- #BeginDate format:Am1 -->November 4, 2010<!-- #EndDate -->
       ) <br>
-      <a href="http://www.loc.gov/homepage/legal.html">Legal</a>&nbsp;|&nbsp;<a href="http://www.loc.gov/global/disclaim.html">External Link Disclaimer</a></p></td>
+      <a href="http://lcnetdev.github.io/homepage/legal.html">Legal</a>&nbsp;|&nbsp;<a href="http://lcnetdev.github.io/global/disclaim.html">External Link Disclaimer</a></p></td>
   </tr>
 </table>
 </body>
