--- a/standards/index.html
+++ b/standards/index.html
@@ -80,12 +80,12 @@ and key standards-settings organizations." />
                 -- MarcXchange</li>
               <li><a href="iso20775/">ISO 20775</a> - Schema for Holdings Information</li>
             </ul>
-            <P><STRONG><a href="http://lcnetdev.github.io/issn/">International Standard
+            <P><STRONG><a href="http://www.loc.gov/issn/">International Standard
             Serial Number (ISSN)</a></STRONG></P>
             <P><a href="http://lcnetdev.github.io/standards/mdc"><strong>Metadata for Digital Content</strong></a>: Developing institutional policies and standards at the Library of Congress </P>
-            <P><a href="http://lcnetdev.github.io/preservation/resources/rfs/"><strong>Recommended Formats  Statement</strong></a>:  
+            <P><a href="http://www.loc.gov/preservation/resources/rfs/"><strong>Recommended Formats  Statement</strong></a>:  
             Best practices for ensuring the  preservation of, and long-term access to, the creative output of the national  and the world in both analog and digital formats </P>
-            <P><STRONG><a href="http://lcnetdev.github.io/rr/scitech/trs/trsover.html">Standards
+            <P><STRONG><a href="http://www.loc.gov/rr/scitech/trs/trsover.html">Standards
           in the Library of Congress Collections</a></STRONG></P>            </td>
           <td width="22%" valign="top"><img src="images/neptfoun.jpg" height=275 width=175 alt="Court of Neptune Fountain" hspace=0 /><br />
             <br />
