--- a/standards/iso25577/namespace-information_old.html
+++ b/standards/iso25577/namespace-information_old.html
@@ -15,9 +15,9 @@
 <div id="container">
   <div id="header">
     <div id="highlevel">
-      <div id="top-left"><a href="http://www.loc.gov/" class="white">The Library
-          of Congress</a><span class="white-text">&nbsp;&raquo;&nbsp;</span><a href="http://www.loc.gov/library/" class="white">Librarians,
-          Archivists</a><span class="white-text">&nbsp;&raquo;</span> <a href="http://www.loc.gov/standards/" class="white">Standards</a></div>
+      <div id="top-left"><a href="http://lcnetdev.github.io/" class="white">The Library
+          of Congress</a><span class="white-text">&nbsp;&raquo;&nbsp;</span><a href="http://lcnetdev.github.io/library/" class="white">Librarians,
+          Archivists</a><span class="white-text">&nbsp;&raquo;</span> <a href="http://lcnetdev.github.io/standards/" class="white">Standards</a></div>
       <div id="top-right">
         <form action="http://search.loc.gov:8765/query.html" accept-charset="utf-8" name="seek1" method="get">
           <input type="hidden" name="col" value="loc">
@@ -55,9 +55,9 @@
     </ul>
   </div>
   <div id="footer">
-    <div id="bottom-left"><a href="http://www.loc.gov/" class="white">The Library
-        of Congress</a><span class="white-text">&nbsp;&raquo;&nbsp;</span><a href="http://www.loc.gov/library/" class="white">Librarians,
-        Archivists</a><span class="white-text">&nbsp;&raquo;<a href="http://www.loc.gov/standards/"> </a></span><a href="http://www.loc.gov/standards/" class="white">Standards</a><br>
+    <div id="bottom-left"><a href="http://lcnetdev.github.io/" class="white">The Library
+        of Congress</a><span class="white-text">&nbsp;&raquo;&nbsp;</span><a href="http://lcnetdev.github.io/library/" class="white">Librarians,
+        Archivists</a><span class="white-text">&nbsp;&raquo;<a href="http://lcnetdev.github.io/standards/"> </a></span><a href="http://lcnetdev.github.io/standards/" class="white">Standards</a><br>
             <span class="white-text">
             <!-- #BeginDate format:Am1 -->July 12, 2007<!-- #EndDate -->
     </span></div>
