--- a/standards/iso20775/index.html
+++ b/standards/iso20775/index.html
@@ -28,7 +28,7 @@
 <input type="hidden" name="rq" value="0">
 <input type="hidden" name="qc" value="">
 <table align="center" class="header" cellpadding="0" cellspacing="0" border="0"><tr><td width="475"><a id="skip" href="#skip_menu">&nbsp;</a>
-  <div class="sitenav"><a href="http://www.loc.gov/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">ISO   20775</span></div></td>
+  <div class="sitenav"><a href="http://lcnetdev.github.io/">The Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">ISO   20775</span></div></td>
 <td width="116"><select name="qp" tabindex="1">
 <option value="url:/iso20775" selected>ISO 20775 Web Pages</option>
 <option value="url:/standards url:/ead url:/marc">Standards Pages</option>
@@ -62,14 +62,14 @@
     <td>&nbsp;</td>
   </tr>
 </table>
-<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://www.loc.gov/">The 
-        Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://www.loc.gov/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">ISO 20775</span></div>
+<table align="center" class="footer" cellpadding="0" cellspacing="0" border="0"><tr valign="top"><td><div class="sitenav"><a href="http://lcnetdev.github.io/">The 
+        Library of Congress</a>&nbsp;&raquo;&nbsp;<a href="http://lcnetdev.github.io/standards/">Standards</a>&nbsp;&raquo;&nbsp;<span class="selected">ISO 20775</span></div>
       <br>
   <span class="sitenav">
   <!-- #BeginDate format:Am1 -->April 6, 2011<!-- #EndDate -->
   </span></td>
 <td align="right"><div class="contactus"><a href="mailto:ndmso@loc.gov">Contact Us</a><br>
-<a href="http://www.loc.gov/homepage/legal.html">Legal</a> | <a href="http://www.loc.gov/global/disclaim.html">External Link Disclaimer</a></div></td>
+<a href="http://lcnetdev.github.io/homepage/legal.html">Legal</a> | <a href="http://lcnetdev.github.io/global/disclaim.html">External Link Disclaimer</a></div></td>
 </tr></table>
 </body>
 </html>
