--- a/standards/index.html
+++ b/standards/index.html
@@ -34,7 +34,7 @@ and key standards-settings organizations." />
               <li><a href="mads/">MADS (Metadata Authority Description Standard)</a> -
                 XML markup for selected authority data from MARC21 records as
               well as original authority data</li>
-              <li><a href="http://lcnetdev.github.io/marc/">MARC 21 formats</a> - Representation
+              <li><a href="http://www.loc.gov/marc/">MARC 21 formats</a> - Representation
                 and communication of descriptive metadata about information items</li>
               <li><a href="https://lcnetdev.github.io/marcxml/">MARCXML</a> - MARC 21 data in an XML structure</li>
               <li><a href="mods/">MODS (Metadata Object Description Standard)</a> -
@@ -67,7 +67,7 @@ and key standards-settings organizations." />
               <li><a href="http://lcnetdev.github.io/standards/sru/">SRU/SRW (Search
                   and Retrieve URL/Web Service)</a> - Web services for search
               and retrieval based on Z39.50 semantics</li>
-              <li><a href="http://lcnetdev.github.io/z3950/agency/">Z39.50</a> - Supports
+              <li><a href="http://www.loc.gov/z3950/agency/">Z39.50</a> - Supports
               information retrieval among different information systems</li>
              <!--  <li><a href="netref/">NetRef</a> - Question/Answer Transaction Protocol (QATP) to support
               exchange between digital reference systems</li>-->
